# hwang

./: CMakeLists.txt  README.md  build.sh  deps.sh  lambda.md  setup.py
cmake/: HwangConfig.cmake.in
cmake/Modules/: FindFFmpeg.cmake  FindGoogleTest.cmake
hwang/: CMakeLists.txt  common.h  decoder_automata.cpp  decoder_automata.h  decoder_automata_test.cpp  descriptors.proto  h264_byte_stream_index_creator.cpp  h264_byte_stream_index_creator.h  hwang_descriptors.proto  hwang_python.cpp  ingest.h  mp4_index_creator.cpp  mp4_index_creator.h  mp4_index_creator_test.cpp  video_decoder_factory.cpp  video_decoder_factory.h  video_decoder_interface.h  video_index.cpp  video_index.h
hwang/impls/nvidia/: convert.cu  convert.h  nvidia_video_decoder.cpp  nvidia_video_decoder.h
hwang/impls/software/: software_video_decoder.cpp  software_video_decoder.h
hwang/tests/: videos.h
hwang/util/: bits.h  cuda.h  fs.cpp  fs.h  h264.h  mp4.h  queue.h  queue.inl
python/: setup.py
python/hwang/: __init__.py  decoder.py  video_index.py
